# fzls

./: .gitignore  CMakeLists.txt  README.md  README.txt  build.sh  config.std.h  w64-mingw32.cmake
src/: args.c  args.h  config.h  errors.c  errors.h  fmt.c  fmt.h  funit.c  funit.h  main.c  out.c  out.h  stdconfig.h
